feat: 대표 주소가 위로 올라오도록 기능 추가